@@ -1,3 +1,6 @@
+  22 Apr 2014; Manuel Rüger <mrueg@gentoo.org> gitlab-grit-2.6.5.ebuild:
+  [dev-ruby/gitlab-grit] Add missing file.
+
 *gitlab-grit-2.6.5 (19 Apr 2014)
 
   19 Apr 2014; Manuel Rüger <mrueg@gentoo.org> +gitlab-grit-2.6.5.ebuild,
